# orionis

./: .gitignore  README.md  orionis-data  orionis.db-shm  orionis.db-wal  start_orion.md  test_cluster.ps1  test_demo.py
agents/c/: orionis.h  test_c.c
agents/cpp/: orionis.hpp
agents/go/orionis/: agent.go  go.mod  go.sum
agents/java/: pom.xml
agents/java/src/main/java/orionis/: Orionis.java  OrionisAgent.java  OrionisTransformer.java  TestJavaAgent.java
agents/node/: index.js  test_node.js
agents/python/: setup.py
agents/python/orionis/: __init__.py  agent.py  pytest_plugin.py
agents/python/orionis_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
agents/rust/orionis-agent/: Cargo.toml  build.rs
agents/rust/orionis-agent/src/: lib.rs
dashboard/: index.html
docs/: api_spec.md  architecture.md
examples/: python_demo.py
examples/cpp/: main.cpp
examples/go/: go.mod  main.go
examples/test_rust/: Cargo.toml
examples/test_rust/src/: main.rs
integrations/github-action/: action.yml
k8s/: manifests.yaml
orion-cli/: orion.py  setup.py
orion-cli/orionis_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
orion-loadgen/: Cargo.toml  build.rs
orion-loadgen/src/: main.rs
orionis-engine/: Cargo.toml  Dockerfile  build.rs  build_error.json  build_error.txt  build_errors.txt  build_errors_full.txt  build_out.txt  engine_error_2.txt  engine_error_3.txt  engine_error_4.txt  engine_output.txt  errors.json  errors.txt  orionis-data  orionis.db  orionis.db-shm  orionis.db-wal  run_error.txt
orionis-engine/orionis-test2/: engine.db  ingestion.wal
orionis-engine/src/: analyzer.rs  auth.rs  clustering.rs  grpc.rs  intel.rs  main.rs  metrics.rs  models.rs  replay.rs  server.rs  store.rs  store_clickhouse.rs  wal.rs  ws.rs
proto/: orionis.proto
test-data/: engine.db
test-redb-data/: engine.db
tests/: e2e_flow.py
truth_docs/: chat_summery.md  final philosophy.md  phase6.md  plan.md
verify_script/: out.txt  out2.txt  out3.txt  out4.txt  out_p2.txt  verify-ip.txt  verify-out.txt  verify4.txt  verify_phase5.py  verify_phase5_5.py  verify_phase5_5_part2.py
