[package]
name = "orion-loadgen"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tonic = "0.10"
prost = "0.12"
futures = "0.3"
rand = "0.8"

[build-dependencies]
tonic-build = "0.10"
