[package]
name = "orionis-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["ws"] }
chrono = { version = "0.4.44", features = ["serde"] }
futures-util = "0.3.32"
prost = "0.13"
redb = "2.1.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
tokio-tungstenite = "0.28.0"
tonic = "0.12.3"
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
async-trait = "0.1.89"
clickhouse = "0.14.2"
jsonwebtoken = "10.3.0"
prometheus = "0.13.4"
lazy_static = "1.5.0"

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-build = "0.12.3"
