[package]
name = "orionis-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = "2.9.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
tonic = "0.12.3"
prost = "0.13.5"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.12.3"
protoc-bin-vendored = "3.0.0"
